k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-app
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops-app
  template:
    metadata:
      labels:
        app: devsecops-app
    spec:
      containers:
      - name: devsecops-app
        image: nodejsonapp/devsecops-app:latest
        ports:
        - containerPort: 3000

        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 15
