k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-service
  namespace: production
spec:
  selector:
    app: devsecops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30007   # optional (range 30000–32767)
  type: NodePort
